Try to fix image resize on mobile

--- a/style.css
+++ b/style.css
@@ -5,17 +5,17 @@
 }
 
 html {
-  height: 100%;
+  height: 100vh;
 }
 
 body {
   background: #272727;
   font-family: 'Poppins', sans-serif;
-  height: 100%;
+  height: 100vh;
 }
 
 #container {
-  height: 100%;
+  height: 100vh;
   position: absolute;
   width: 100%;
   overflow: hidden;
@@ -94,12 +94,12 @@ header {
 }
 
 #hero-section {
+  height: 100vh;
   overflow: hidden;
   background: linear-gradient(rgba(39, 39, 39, .4), rgba(39, 39, 39, .4)), url('./img/hero.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  height: calc(100% + 70px);
   color: #eaebe4;
   display: flex;
   flex-direction: column;
